--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: E(X)PECTED P(A)YOFF
 #subtitle: "identify understand solve make do"
 subtitle: "probabalistic thinking, complexity management, software evolution, abstraction"
 author: Byron Gibson
-simple_search: http://duckduckgo.com/
+simple_search: http://www.duckduckgo.com/
 description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
