--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://expectedpayoff.github.com
 title: E(X)PECTED P(A)YOFF
-subtitle: "probabalistic thinking, complexity anticipation, software evolution, abstraction"
+subtitle: "Probabilistic Thinking, Data Visualization, Software Evolution, Desktop Manufacturing, P2P Everything"
 author: Byron Gibson
 simple_search: http://www.duckduckgo.com/
 description:
