--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: E(X)PECTED P(A)YOFF
 subtitle: "Probabilistic Thinking, Data Visualization, Software Evolution, Desktop Manufacturing, P2P Everything"
 author: Byron Gibson
 simple_search: http://www.duckduckgo.com/
-description:
+description: Personal Blog of Byron Gibson
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
