update: fixed url from expectedpayoff.github.com to expectedpayoff.com

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://expectedpayoff.github.com
+url: http://expectedpayoff.com
 title: E(X)PECTED P(A)YOFF
 subtitle: "Probabilistic Thinking, Data Visualization, Software Evolution, Desktop Manufacturing, P2P Everything"
 author: Byron Gibson
