--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user: fbg111@gmail.com
+googleplus_user: 105507345434893922031
 googleplus_hidden: false
 
 # Pinboard
