--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://expectedpayoff.com
 title: E(X)PECTED P(A)YOFF
-subtitle: "on software, uncertainty, economic development, and their intersection.  by Byron Gibson."
+subtitle: "on software, uncertainty, economics, and sometimes their intersection.  by Byron Gibson."
 #subtitle: "Probabilistic Thinking, Data Science, Software Evolution, Desktop Manufacturing, Open Government, P2P Everything"
 #subtitle: "Probabilistic Thinking, Data Visualization, Software Evolution, Desktop Manufacturing, P2P Everything"
 author: Byron Gibson
